--- a/src/styles/sass/_dark-sections.scss
+++ b/src/styles/sass/_dark-sections.scss
@@ -1,6 +1,6 @@
 footer {
   background-color: $darker;
-  height: 350px;
+  height: 390px;
   bottom: 0;
   position: absolute;
 }
