--- a/src/styles/sass/movie-card.scss
+++ b/src/styles/sass/movie-card.scss
@@ -80,6 +80,9 @@
   @media screen and (max-width: 1220px) {
     grid-template-columns: auto auto;
   }
+  @media screen and (max-width: 700px) {
+    grid-template-columns: auto;
+  }
 }
 
 span {
